--- a/nginx-deployment.yaml
+++ b/nginx-deployment.yaml
@@ -17,3 +17,18 @@ spec:
           image: nginx:1.28.0
           ports:
             - containerPort: 80
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-service
+spec:
+  selector:
+    app: nginx
+  type: LoadBalancer
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+      nodePort: 30001
