--- a/deployments_and_services/nginx-config.yaml
+++ b/deployments_and_services/nginx-config.yaml
@@ -28,7 +28,13 @@ spec:
     app: nginx
   type: LoadBalancer
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
       targetPort: 80
       nodePort: 30001
+    - name: https
+      protocol: TCP
+      port: 443
+      targetPort: 443
+      nodePort: 30002
