--- a/deployments_and_services/mongodb-config.yaml
+++ b/deployments_and_services/mongodb-config.yaml
@@ -36,7 +36,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongodb-service
+  labels:
+    app: mongodb-service
 spec:
+  clusterIP: None
   selector:
     app: mongodb
   ports:
