--- a/statefulsets/mongo-statefulset.yaml
+++ b/statefulsets/mongo-statefulset.yaml
@@ -4,7 +4,7 @@ metadata:
   name: mongo-sfs
 spec:
   serviceName: mongodb-service
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: mongo-sfs
@@ -17,6 +17,11 @@ spec:
       containers:
         - name: mongodb
           image: mongo
+          command:
+            - mongod
+            - "--replSet" # --replSet <setname>: Configures replication.
+            - rs0
+            - "--bind_ip_all" # --bind_ip_all: the mongod instance binds to all IPv4 addresses
           ports:
             - containerPort: 27017
           volumeMounts:
@@ -25,6 +30,13 @@ spec:
             - name: keyfile
               mountPath: /etc/mongodb-keyfile
               readOnly: true
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "256Mi"
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
       volumes:
         - name: keyfile
           secret:
