added the mongodb-uri key for the mongodb-secret secret

--- a/secrets/mongodb-secret-example.yaml
+++ b/secrets/mongodb-secret-example.yaml
@@ -7,3 +7,5 @@ type: Opaque
 data:
   mongo-root-username: dXNlcm5hbWU=
   mongo-root-password: cGFzc3dvcmQ=
+  # get base64 encoded value for mongodb://username:password@mongodb-service.development.svc.cluster.local:27017
+  mongodb-uri:
