--- a/mongodb-exporter/values.yaml
+++ b/mongodb-exporter/values.yaml
@@ -1,5 +1,21 @@
+# If the multi-target mode is enabled, this value will be ignored.
+# [mongodb[+srv]://][user:pass@]host1[:port1][,host2[:port2],...][/database][?options]
 mongodb:
   uri: "mongodb://mongodb-service.development.svc.cluster.local:27017"
+
+# Name of an externally managed secret (in the same namespace) containing the connection uri as key `mongodb-uri`.
+# If this is provided, the value mongodb.uri is ignored.
+existingSecret:
+  name: mongodb-secret
+  key: mongodb-uri
+
+service:
+  type: NodePort
+  portName: metrics
+  nodePort: 30657
+  port: 9216
+  protocol: TCP
+  targetPort: metrics
 
 serviceMonitor:
   enabled: true
