corrected the spec.selector map for the prometheus-server-ext-service and grafana-ext-service services

--- a/services/prometheus-server-ext-service.yaml
+++ b/services/prometheus-server-ext-service.yaml
@@ -4,9 +4,8 @@ metadata:
   name: prometheus-server-ext-service
 spec:
   selector:
-    app.kubernetes.io/component: server
-    app.kubernetes.io/instance: prometheus
     app.kubernetes.io/name: prometheus
+    operator.prometheus.io/name: kube-prometheus-stack-prometheus
   type: NodePort
   ports:
     - nodePort: 30517
