--- a/services/grafana-ext-service.yaml
+++ b/services/grafana-ext-service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: grafana-ext-service
 spec:
   selector:
-    app.kubernetes.io/instance: grafana
+    app.kubernetes.io/instance: kube-prometheus-stack
     app.kubernetes.io/name: grafana
   type: NodePort
   ports:
