set the serviceMonitor.additionalLabels.release map to kube-prometheus-stack in order for the Prometheus MongoDB Exporter to be recognized in Prometheus

--- a/mongodb-exporter/values.yaml
+++ b/mongodb-exporter/values.yaml
@@ -19,7 +19,7 @@ serviceMonitor:
   interval: 30s
   scrapeTimeout: 10s
   additionalLabels:
-    release: prometheus
+    release: kube-prometheus-stack
 
 extraArgs:
   - --collector.diagnosticdata
