allow the mongo-express pod to have access to MongoDB

--- a/deployments/mongo-express.yaml
+++ b/deployments/mongo-express.yaml
@@ -13,6 +13,7 @@ spec:
     metadata:
       labels:
         app: mongo-express
+        access: "true"
     spec:
       containers:
         - name: mongo-express
