--- a/cronjobs/mongodb-backup-cronjob.yaml
+++ b/cronjobs/mongodb-backup-cronjob.yaml
@@ -7,6 +7,9 @@ spec:
   jobTemplate:
     spec:
       template:
+        metadata:
+          labels:
+            access: "true"
         spec:
           containers:
             - name: mongodump
