set the securityContext.allowPrivilegeEscalation to false for most of the pods in a cluster

--- a/cronjobs/mongodb-backup-cronjob.yaml
+++ b/cronjobs/mongodb-backup-cronjob.yaml
@@ -41,6 +41,8 @@ spec:
               volumeMounts:
                 - name: backup-storage
                   mountPath: /backup
+              securityContext:
+                allowPrivilegeEscalation: false
           restartPolicy: Never
           volumes:
             - name: backup-storage
