--- a/deployments/mongo-express.yaml
+++ b/deployments/mongo-express.yaml
@@ -46,3 +46,5 @@ spec:
                 secretKeyRef:
                   name: mongodb-secret
                   key: mongo-root-password
+          securityContext:
+            allowPrivilegeEscalation: false
