--- a/statefulsets/mongo-statefulset.yaml
+++ b/statefulsets/mongo-statefulset.yaml
@@ -36,6 +36,8 @@ spec:
             limits:
               cpu: "500m"
               memory: "512Mi"
+          securityContext:
+            allowPrivilegeEscalation: false
       volumes:
         - name: keyfile
           secret:
