--- a/namespaces/namespace-prod.yaml
+++ b/namespaces/namespace-prod.yaml
@@ -4,3 +4,7 @@ metadata:
   name: production
   labels:
     name: production
+    pod-security.kubernetes.io/enforce: restricted
+    pod-security.kubernetes.io/enforce-version: latest
+    pod-security.kubernetes.io/warn: restricted
+    pod-security.kubernetes.io/warn-version: latest
