set the pod-security.kubernetes.io/enforce to baseline for the development and production namespaces

--- a/namespaces/namespace-dev.yaml
+++ b/namespaces/namespace-dev.yaml
@@ -4,7 +4,7 @@ metadata:
   name: development
   labels:
     name: development
-    pod-security.kubernetes.io/enforce: restricted
+    pod-security.kubernetes.io/enforce: baseline
     pod-security.kubernetes.io/enforce-version: latest
     pod-security.kubernetes.io/warn: restricted
     pod-security.kubernetes.io/warn-version: latest
