--- a/ingress/nginx-ingress.yaml
+++ b/ingress/nginx-ingress.yaml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   name: nginx-ingress
   annotations:
+    kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
