modified the mongodb-deployment deployment that assigns the mongodb pod to the worker-m02 node via Node Affinity

--- a/deployments/mongodb-config.yaml
+++ b/deployments/mongodb-config.yaml
@@ -32,3 +32,13 @@ spec:
               key: mongo-root-password
         securityContext:
           allowPrivilegeEscalation: false
+      affinity:
+        nodeAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 1
+            preference:
+              matchExpressions:
+              - key: servertype
+                operator: In
+                values:
+                - mongodb
