use the requiredDuringSchedulingIgnoredDuringExecution map for Node Affinity

--- a/deployments/mongodb-config.yaml
+++ b/deployments/mongodb-config.yaml
@@ -34,10 +34,9 @@ spec:
           allowPrivilegeEscalation: false
       affinity:
         nodeAffinity:
-          preferredDuringSchedulingIgnoredDuringExecution:
-          - weight: 1
-            preference:
-              matchExpressions:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
               - key: servertype
                 operator: In
                 values:
