configured the mongo-express deployment and mongo-sfs statefulset to assign the pod to the worker-m02 node

--- a/deployments/mongo-express.yaml
+++ b/deployments/mongo-express.yaml
@@ -48,3 +48,12 @@ spec:
                   key: mongo-root-password
           securityContext:
             allowPrivilegeEscalation: false
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: servertype
+                operator: In
+                values:
+                - mongodb
