--- a/statefulsets/mongo-statefulset.yaml
+++ b/statefulsets/mongo-statefulset.yaml
@@ -43,6 +43,15 @@ spec:
           secret:
             secretName: mongodb-keyfile
             defaultMode: 0400
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: servertype
+                operator: In
+                values:
+                - mongodb
   volumeClaimTemplates:
     - metadata:
         name: mongo-storage
