added the tolerations map for the deployment configs and the mongo-sfs statefulset config

--- a/deployments/mongodb-config.yaml
+++ b/deployments/mongodb-config.yaml
@@ -41,3 +41,8 @@ spec:
                 operator: In
                 values:
                 - mongodb
+      tolerations:
+      - key: "servertype"
+        operator: "Equal"
+        value: "nginx"
+        effect: "NoSchedule"
