--- a/statefulsets/mongo-statefulset.yaml
+++ b/statefulsets/mongo-statefulset.yaml
@@ -52,6 +52,11 @@ spec:
                 operator: In
                 values:
                 - mongodb
+      tolerations:
+      - key: "servertype"
+        operator: "Equal"
+        value: "nginx"
+        effect: "NoSchedule"
   volumeClaimTemplates:
     - metadata:
         name: mongo-storage
