--- a/deployments/mongo-express.yaml
+++ b/deployments/mongo-express.yaml
@@ -57,3 +57,8 @@ spec:
                 operator: In
                 values:
                 - mongodb
+      tolerations:
+      - key: "servertype"
+        operator: "Equal"
+        value: "nginx"
+        effect: "NoSchedule"
