renamed the key name to noservertype for the tolerations maps

--- a/deployments/nginx-config.yaml
+++ b/deployments/nginx-config.yaml
@@ -27,7 +27,7 @@ spec:
                 values:
                 - nginx
       tolerations:
-      - key: "servertype"
+      - key: "noservertype"
         operator: "Equal"
         value: "mongodb"
         effect: "NoSchedule"
