--- a/deployments/mongo-express.yaml
+++ b/deployments/mongo-express.yaml
@@ -58,7 +58,7 @@ spec:
                 values:
                 - mongodb
       tolerations:
-      - key: "servertype"
+      - key: "noservertype"
         operator: "Equal"
         value: "nginx"
         effect: "NoSchedule"
