--- a/deployments/mongodb-config.yaml
+++ b/deployments/mongodb-config.yaml
@@ -42,7 +42,7 @@ spec:
                 values:
                 - mongodb
       tolerations:
-      - key: "servertype"
+      - key: "noservertype"
         operator: "Equal"
         value: "nginx"
         effect: "NoSchedule"
